# mergenotes

./: .gitignore  .gitmodules  README.md  __init__.py  config.json  config.md  config.py  duplicate_notes.py  find_duplicates.py  grab_key.py  merge_duplicates.py  merge_notes.py  mergenotes.py  package.sh  pyproject.toml  settings_dialog.py
.github/workflows/: make_release.yml
merge_notes/: __init__.py  config.json  config.md  config.py  config_types.py  duplicate_notes.py  find_duplicates.py  merge_duplicates.py  merge_notes.py  settings_dialog.py
merge_notes/widgets/: ordering_widget.py
playground/: no_anki_config.py  run_settings_dialog.py
scripts/: format.sh  package.sh
tests/: conftest.py  helpers.py  test_config.py  test_merge_notes.py  test_settings_dialog.py  test_text_normalization.py
